--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,10 @@
             "polyfills": [
               "zone.js"
             ],
+            "styles": [
+  "src/styles.scss",
+  "node_modules/bootstrap/dist/css/bootstrap.min.css"
+],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
