--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,4 +1,18 @@
-runs-on: ubuntu-latest
+
+name: dev
+
+# Controls when the action will run. Triggers the workflow on push or pull request
+# events but only for the master branch
+on:
+  push:
+    branches:
+      - master
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+jobs:
+  firebase-deploy:
+
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@master
