--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:staging": "ng build --prod -c=staging",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
