--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -20,6 +20,7 @@ jobs:
       with:
         node-version: '12.x'
     - run: npm install
+    - run: npm run build
     - uses: w9jds/firebase-action@master
       with:
         args: deploy --only hosting:web-cv-25a25 --project web-cv-25a25
