--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^15.0.0",
     "@ng-bootstrap/ng-bootstrap": "^14.0.0",
     "bootstrap": "^5.2.3",
+    "firebase": "^9.15.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
