--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,7 +1,7 @@
 
 name: dev
 
-# Controls when the action will run. Triggers the workflow on push or pull request
+        # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
   push:
@@ -20,7 +20,7 @@ jobs:
       with:
         node-version: '12.x'
     - run: npm install
-    - run: npm run build
+    - run: npm run build:staging
     - uses: w9jds/firebase-action@master
       with:
         args: deploy --only hosting:web-cv-25a25 --project web-cv-25a25
