--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:staging": "ng build -c=staging",
+    "build:staging": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
